# a4_em_comics

./: README.md  example.ipynb  gt_as_predicted.json  pyproject.toml
a4_em_comics/: dataset.py  metric.py
